# Vault-Gaurd

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
public/D-OPRC-Level1/: L.1.11 In Situ Burning CGPRT(W).pptx  L.1.13 Shoreline Assessment and Evaluation CGPRT(W).pptx  L.1.17 Post incident operations CGPRT(W).pptx  L.1.2 Fate and Behaviour  By CGPRT(W).pptx  L.1.4 Principles of Incident Management By CGPRT(W).pptx  L.1.5 Health and Safety CGPRT(W).pptx  L.1.7 Dispersants CGPRT(W).pptx
public/D-OPRC-Level2/: L.2.1 Introduction and Orientation.pptx  L.2.12 Oil Spill Response in Fast Water.pptx  L.2.13 Oil Spill Response in Ice.pptx  L.2.14 Oiled Wildlife Management.pptx  L.2.15 Archaeological and Cultural Resources.pptx  L.2.16 Health and Safety considerations.pptx  L.2.17 Logisitical and decontamination issues_highlighted.pptx  L.2.19 Communications and Media.pptx  L.2.20 Response termination criteria.pptx  L.2.21 Post incident operations.pptx  L.2.22 Administrative issues.pptx  L.2.6 Fate and behavior.pptx  (+2 more)
src/: App.jsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_create_users_and_Sessions.sql  0001_file_tags.sql  0001_files_index.sql  0001_storage_scans.sql  0002_add_audit_indexes.sql  0003_add_unique_path.sql  0004_recent_access.sql
src-tauri/src/: admin_backend.rs  audit.rs  auth_backend.rs  db.rs  fs_ops.rs  fs_watch.rs  lib.rs  main.rs  security.rs  session.rs  session_store.rs  user_backend.rs
src-tauri/vaultguard_data/: vaultguard.sqlite
(+117 files in other folders)
