[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = ["protocol-asset"] }   # match your runtime
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["std", "clock"] }

# Database, hashing, utilities
# **Use rusqlite 0.29.0 (matches r2d2_sqlite 0.22)**
rusqlite = { version = "0.29.0", features = ["bundled", "unlock_notify"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"

argon2 = "0.5.3"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

uuid = { version = "1.18.1", features = ["v4", "serde"] }
once_cell = "1.20"
keyring = "1.0"
dirs = "6.0.0"
dirs-next = "2.0.0"
sysinfo = "0.29"
walkdir = "2.3"
notify = "6.1"
fs_extra = "1.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"

tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }

# Optional Tauri plugins you mentioned (add as needed)
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-opener = "2.5.2"
